--- a/packages/jaeger-ui/src/components/TracePage/TraceTimelineViewer/SpanBarRow.css
+++ b/packages/jaeger-ui/src/components/TracePage/TraceTimelineViewer/SpanBarRow.css
@@ -81,7 +81,7 @@ limitations under the License.
   outline: none;
   overflow: hidden;
   padding-left: 4px;
-  padding-right: 0.25em;
+  padding-right: 15px;
   position: relative;
   text-overflow: ellipsis;
 }
@@ -121,6 +121,13 @@ limitations under the License.
 
 .span-name:hover > .endpoint-name {
   color: #000;
+}
+
+.code-location {
+  position: absolute;
+  height: 70%;
+  top: 15%;
+  right: 5px;
 }
 
 .span-svc-name {
