--- a/packages/jaeger-ui/src/components/TracePage/TraceTimelineViewer/SpanDetail/index.css
+++ b/packages/jaeger-ui/src/components/TracePage/TraceTimelineViewer/SpanDetail/index.css
@@ -20,6 +20,11 @@ limitations under the License.
   font-size: 1.5em;
 }
 
+.SpanDetail--importanceMarker {
+  height: 25px;
+  align-self: flex-start;
+}
+
 .SpanDetail--divider {
   background: #ddd;
 }
