--- a/packages/jaeger-ui/src/components/common/ErrorMessage.css
+++ b/packages/jaeger-ui/src/components/common/ErrorMessage.css
@@ -62,3 +62,62 @@ limitations under the License.
   padding: 0.5em;
   white-space: pre;
 }
+
+.CustomErrorMessage {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex-grow: 1;
+}
+
+.CustomErrorMessage--iconContainer {
+  width: 72px;
+  height: 72px;
+  border-radius: 50%;
+  background: #f5f5f5;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.CustomErrorMessage--text {
+  display: flex;
+  flex-direction: column;
+  font-weight: 500;
+  align-items: center;
+  margin: 12px 0 14px;
+}
+
+.CustomErrorMessage--title {
+  font-size: 14px;
+  line-height: 17px;
+  color: #49494d;
+  margin-bottom: 4px;
+}
+
+.CustomErrorMessage--description {
+  font-size: 12px;
+  line-height: 14px;
+  color: #828797;
+  text-align: center;
+}
+
+.CustomErrorMessage--link {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+  text-decoration: underline;
+  color: #426dda;
+}
+
+.CustomErrorMessage--slackLink {
+  display: flex;
+  gap: 4px;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+  text-transform: capitalize;
+  text-decoration: underline;
+  color: #426dda;
+}
