--- a/packages/jaeger-ui/src/components/TracePage/TracePageHeader/TracePageHeader.css
+++ b/packages/jaeger-ui/src/components/TracePage/TracePageHeader/TracePageHeader.css
@@ -108,3 +108,7 @@ limitations under the License.
   font-size: 1.78em;
   margin-right: 0.15em;
 }
+
+.TracePageHeader--zoomControls {
+  margin-right: 0.5em;
+}
