--- a/packages/jaeger-ui/src/components/TracePage/TracePageHeader/AltViewOptions.css
+++ b/packages/jaeger-ui/src/components/TracePage/TracePageHeader/AltViewOptions.css
@@ -18,6 +18,6 @@ limitations under the License.
   border-radius: 4px;
   height: 32px;
   line-height: 30px;
-  margin-right: 1rem;
+  margin: 0 1rem;
   padding: 0 8px;
 }
