--- a/packages/jaeger-ui/src/components/TracePage/TracePageHeader/TracePageHeader.css
+++ b/packages/jaeger-ui/src/components/TracePage/TracePageHeader/TracePageHeader.css
@@ -58,6 +58,8 @@ limitations under the License.
   color: var(--tx-color-title);
   display: flex;
   flex: 1;
+  min-width: 120px;
+  overflow: hidden;
 }
 
 .TracePageHeader--titleLink:hover * {
@@ -85,6 +87,9 @@ limitations under the License.
   line-height: 1em;
   margin: 0 0 0 0.5em;
   padding: 0.5em 0;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .TracePageHeader--title.is-collapsible {
@@ -110,5 +115,6 @@ limitations under the License.
 }
 
 .TracePageHeader--zoomControls {
+  flex-shrink: 0;
   margin-left: 0.5em;
 }
